[package]
name = "demo-stocks-filter"
version = "0.1.0"
authors = ["Name <name@email.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "^0.3"
actix-web = "2.0.0"
actix-rt = "1.0.0"
maplit = "^1.0"
faas_rust = { git = "https://github.com/openshift-cloud-functions/faas-rust-runtime", branch = "serverless-streaming"}
faas_rust_macro = { git = "https://github.com/openshift-cloud-functions/faas-rust-runtime", branch = "serverless-streaming"}
cloudevent = { git = "https://github.com/openshift-cloud-functions/faas-rust-runtime", branch = "serverless-streaming"}

[[bin]]
name = "function"
path = "src/main.rs"
